# tr_plugin_transcribe

./: CMakeLists.txt  config.json
include/: transcriber_config.hpp
src/: transcriber_plugin.cc
